# xpclrs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: crates.yml  docker.yml  rust.yml
src/: lib.rs  main.rs
src/io/: mod.rs
src/methods/: mod.rs
src/plink/: mod.rs
src/xcf/: mod.rs
test/: plink.bed  plink.fam  samplesA_plink.txt  samplesB.txt  samplesB_plink.txt  test.vcf.gz.tbi
