[package]
name = "xpclrs"
version = "1.0.0"
authors = ["Andrea Talenti"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RenzoTale88/xpclrs"
readme = "README.md"
keywords = ["genome", "bioinformatics", "sequencing", "selection"]
categories = ["science::bioinformatics"]
description = "A high-performance rust implementation of the XP-CLR method."

[dependencies]
anyhow           = "1.0.98"
clap             = "4.5.42"
counter          = "0.7.0"
env_logger       = "0.11"
flate2           = "1.0.35"
itertools        = "0.14.0"
log              = "0.4"
niffler          = "2.5.0"
rand             = "0.9.2"
rayon            = "1.10.0"
rust-htslib      = "0.51.0"
rustc-hash       = "2.1.1"
scirs2-integrate = { version = "0.1.0-beta.2", features = ["simd", "parallel"] }
statistical      = "1.0.0"
statrs           = "0.18.0"
